--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "ai-formbuilder",
+  "name": "codenames",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "nodemon server.js",
     "lint": "next lint",
     "db:push": "npx drizzle-kit push",
     "db:studio": "npx drizzle-kit studio"
@@ -17,6 +18,7 @@
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-progress": "^1.0.3",
@@ -26,6 +28,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.31.2",
+    "http": "^0.0.1-security",
     "lucide-react": "^0.394.0",
     "next": "14.2.4",
     "next-themes": "^0.3.0",
@@ -33,6 +36,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-web-share": "^2.0.2",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
@@ -42,7 +47,7 @@
     "@types/node": "20.14.2",
     "@types/react": "18.3.3",
     "daisyui": "^4.12.2",
-    "drizzle-kit": "^0.22.7",
+    "drizzle-kit": "^0.22.8",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "5.4.5"
