--- a/.env
+++ b/.env
@@ -1,2 +1,10 @@
-# NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_a2Vlbi1jb2QtOTQuY2xlcmsuYWNjb3VudHMuZGV2JA
-# CLERK_SECRET_KEY=sk_test_x4R7RYdfuLuNrgeCwDR2m13vemG9cPt8avTEzV9etk
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_a2Vlbi1jb2QtOTQuY2xlcmsuYWNjb3VudHMuZGV2JA
+CLERK_SECRET_KEY=sk_test_x4R7RYdfuLuNrgeCwDR2m13vemG9cPt8avTEzV9etk
+NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
+NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
+# NEXT_PUBLIC_DATABASE_URL_CONFIG=postgresql://ai-form-builder_owner:cvq9dUl6NZQt@ep-solitary-cell-a1h44wmc.ap-southeast-1.aws.neon.tech/ai-form-builder?sslmode=require
+NEXT_PUBLIC_GEMINI_API_KEY=AIzaSyBHoiN9RbxQNJpqkAcRupFMkQrUAcpXF9g
+NEXT_PUBLIC_BASE_URL=http://localhost:5000
+
+NEXT_PUBLIC_APP_URL=http://localhost:3000
+NEXT_PUBLIC_DATABASE_URL_CONFIG=postgresql://neondb_owner:A7WkfclMV5tH@ep-small-firefly-a1s0d3rk.ap-southeast-1.aws.neon.tech/neondb?sslmode=require
