--- a/.env
+++ b/.env
@@ -4,7 +4,9 @@ NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
 NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
 # NEXT_PUBLIC_DATABASE_URL_CONFIG=postgresql://ai-form-builder_owner:cvq9dUl6NZQt@ep-solitary-cell-a1h44wmc.ap-southeast-1.aws.neon.tech/ai-form-builder?sslmode=require
 NEXT_PUBLIC_GEMINI_API_KEY=AIzaSyBHoiN9RbxQNJpqkAcRupFMkQrUAcpXF9g
-NEXT_PUBLIC_BASE_URL=http://localhost:5000
+
+NEXT_PUBLIC_DEV_SERVER_URL=http://localhost:5000
+NEXT_PUBLIC_PROD_SERVER_URL=https://codenames-server-bnuk.onrender.com
 
 NEXT_PUBLIC_APP_URL=http://localhost:3000
 NEXT_PUBLIC_DATABASE_URL_CONFIG=postgresql://neondb_owner:A7WkfclMV5tH@ep-small-firefly-a1s0d3rk.ap-southeast-1.aws.neon.tech/neondb?sslmode=require
